--- a/bambu-app/package.json
+++ b/bambu-app/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "leaflet": "^1.9.4",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
